# pushflow

./: .env.example  readme.md
backend/: .env.example  .gitignore  Cargo.toml
backend/entity/src/entities/: api_key_scopes.rs  api_keys.rs  group_subscribers.rs  groups.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  services.rs  subscribers.rs  users.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250808_012056_create_model.rs  m20250808_012056_create_users.rs  m20250820_064413_subscriber_keys_separate.rs
backend/src/: gated.rs  main.rs  oauth.rs  util.rs
backend/src/gated/: middleware.rs  mod.rs  service.rs
backend/src/gated/service/: group.rs  key.rs  mod.rs
backend/src/keyed/: middleware.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/public/: service-worker.js
frontend/src/: env.ts
frontend/src/app/: AppProvider.tsx  NewServicePopup.tsx  globals.scss  layout.tsx  loading.tsx  page.scss  page.tsx
frontend/src/app/api/login/: route.ts
frontend/src/app/api/login/google/: route.ts
frontend/src/app/api/logout/: route.ts
frontend/src/app/api/me/: route.ts
frontend/src/app/api/services/[id]/groups/[groupId]/notify/: route.ts
frontend/src/app/api/services/[id]/subscribe/: route.ts
frontend/src/app/components/: Card.scss  Card.tsx  Copyable.scss  Copyable.tsx  DataList.scss  DataList.tsx  DataRow.scss  DataRow.tsx  Header.scss  Header.tsx  IconWrapper.scss  IconWrapper.tsx  ServiceApiKey.tsx  ServiceGroup.tsx  SubscriptionUser.tsx
frontend/src/app/components/dialogs/: ApiKeyCodeSnippetDialog.scss  ApiKeyCodeSnippetDialog.tsx  CodeSnippetDialog.scss  CodeSnippetDialog.tsx  CreateApiKeyDialog.tsx  CreateGroupDialog.tsx  DeleteApiKeyDialog.tsx  DeleteGroupDialog.tsx  DeleteSubscriberDialog.tsx  EditSubscriberDialog.tsx  NewServiceDialog.tsx  ShowApiKeyDialog.scss  ShowApiKeyDialog.tsx
frontend/src/app/projects/[id]/: ServiceAPIKeyList.tsx  ServiceGroupList.tsx  ServiceStateLoader.tsx  ServiceSubscriberList.tsx  page.scss  page.tsx
frontend/src/helpers/: dialog.ts  server.ts  service-api-key.ts  service-group.ts  service-subscriber.ts  service.ts  snippet.ts  util.tsx  webpush-test.ts
frontend/src/store/: store.ts
frontend/src/store/slices/: dialogSlice.ts  serviceSlice.ts
frontend/src/types/: database.ts
