[package]
name = "pushflow-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4"] }
dotenv = "0.15.0"

[profile.release]
lto = "fat"
