[workspace]
members = [".", "entity", "migration"]

[package]
name = "pushflow-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
serde = {version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4", "v7", "serde"] }
dotenv = "0.15.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-uuid", "with-chrono"] }
entity = { path = "entity" }
migration = { path = "migration" }
actix-session = { version = "0.10.1", features = ["redis-session", "redis-pool"] }
# this silently has to match actix-session
deadpool-redis = "0.16.0"
futures-util = "0.3.31"
vapid = "0.6.0"
actix-web-httpauth = "0.8.2"

[profile.release]
lto = "fat"
